@@ -8,6 +8,7 @@
 	* Changed tx_solr_pluginbase_PluginBase to execute postRender() also after renderError()
 	* Added feature #35544: Configurable query parameter
 	* Fixed bug #35665: An empty search disables the rendering of any plugin output, credits Stefan Sprenger
+	* Added tx_solr_facet_FacetOption::isSelectedInFacet()
 
 2012-07-20  Stefan Sprenger  <stefan.sprenger@dkd.de>
 
